# Airline-Booking

./: pyproject.toml
airline_booking/: .gitignore
airline_booking/backend/app/: main.py
airline_booking/backend/app/alembic/: env.py
airline_booking/backend/app/app/: main.py
airline_booking/backend/app/app/auth/: router.py
airline_booking/backend/app/app/booking/: models.py  router.py  schema.py  services.py  validator.py
airline_booking/backend/app/app/catalog/: router.py  schema.py  services.py  validator.py
airline_booking/backend/app/app/core/: config.py  security.py
airline_booking/backend/app/app/database/: models.py  session.py
airline_booking/backend/app/app/flight/: models.py  schema.py
airline_booking/backend/app/app/user/: models.py  router.py  schema.py  services.py  validator.py
tests/: test_airline_booking.py
